replace img links with png files - fix footer spacing

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -148,7 +148,7 @@ color: white;
 .contact-logo {
     height:20%; 
     width:20%; 
-    margin: 10rem auto;
+    margin: 11.5rem auto;
 }
 .job {
     padding: 2rem;
